Changelog
=========

0.4.1 (unreleased)
------------------

- Nothing changed yet.


0.4.0 (2012-11-15)
------------------

* added a product's browser layer
  [keul]
* provided an own configuration panel
  [keul]
* added all remaining configutation in Plone UI
  [keul]
* ``toggleContainerClass`` now is ``toggleContainerClasses``
  (can be used for a set of classes)
  [keul]
* added i18n support and italian translation
  [keul]
* changes AJAX calling context, now always calling portal root URL
  [keul]
* added tests (both Plone and JavaScript)
  [keul]

0.3.0 (2011-06-07)
------------------

* you can now use more general `jQuery selector`__ instead of simple URL path [keul]
* do not show types that are in list of unwanted types in navigation [keul]
* ``collective.navigationtoggle.txt`` was empty [keul]
* JSLint cleanup [keul]
* code is more general, and new properties likes ``toggleContainerClass``, ``listType``
  and ``listItem`` has been added.
  The code now can be used to simulate navigators also with not portlet navigator
  structures [keul]
* added the uninstall GS step [keul]
* fixed the `simplejson`__ dependency correctly, only if with Python < 2.6 [keul]
* links selectors can be added through Plone UI [keul]

__ http://docs.jquery.com/Selectors
__ http://pypi.python.org/pypi/simplejson

0.2.1 (2010-07-09)
------------------

* fixed a bug when fast double-click on opened elements (close `#1`__) [keul]
* much better Sunburst support (and other themes, in general), now checking also for "*contenttype-xx*"
  and "*state-xx*" CSS classes on links [keul]

__ http://plone.org/products/collective.navigationtoggle/issues/1

0.2.0 (2010-04-11)
------------------

* query_subelement view documentation was incomplete [keul]
* when querying empty folder, do not prevent (in facts: simulate) browser default action [keul]
* prevent browser cache (mainly know Internet Explorer problem) [keul]