@@ -65,7 +65,7 @@
                         </a>
                     
                 </li>
-                
+
                 <li class="navTreeItem visualNoMarker navTreeFolderish section-test">
                 
                         <a title="" class="state-published navTreeFolderish contenttype-folder"
@@ -75,7 +75,17 @@
                         </a>
                 
                 </li>
-    
+
+                <li class="navTreeItem visualNoMarker navTreeFolderish section-test-folder">
+                
+                        <a title="" class="state-published navTreeFolderish contenttype-folder"
+                           href="/Plone/test%20folder">
+                            
+                            <span>Test folder</span>
+                        </a>
+                
+                </li>
+
             </ul>
             <span class="portletBottomLeft"></span>
             <span class="portletBottomRight"></span>
