@@ -4,8 +4,10 @@ Changelog
 0.4.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- fixed a bug when used with containers with spaces inside the id
+  (close `#2`__) [keul]
 
+  __ https://github.com/RedTurtle/collective.navigationtoggle/issues/2
 
 0.4.0 (2012-11-15)
 ------------------
